# mazes

./: README.md  pyproject.toml
mazes/: maze-generation.ipynb  maze-traversal.ipynb  render-gif-example.ipynb
mazes/generation/: composite-renderer-example.ipynb  direction.py  maze.py  npc.py  stack.py  structures.py
mazes/generation/generators/: random_backtracer.py
mazes/generation/renderers/: agents_renderer.py  units.py  wall_drawer.py
mazes/generation/walkers/: a_star.py  clueless.py  wall_follower.py
