[tool.poetry]
name = "mazes"
version = "0.1.0"
description = ""
authors = ["Samuel Holloway <sholloway@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
ipykernel = "^6.3.1"
ipycanvas = "^0.9.0"
numpy = "^1.21.2"
pandas = "^1.3.2"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
